--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
       <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>auth0-spring-mvc</artifactId>
+      <version>1.2.0</version>
+    </dependency>
      <dependency>
       <groupId>org.apache.httpcomponents.client5</groupId>
       <artifactId>httpclient5</artifactId>
