--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
        <version>1.0.57</version>
     </dependency>
     <dependency>
+    <groupId>io.github.leetcrunch</groupId>
+    <artifactId>ab-test</artifactId>
+    <version>1.5.0</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.1</version>
